[package]
name = "skim-lisp"
version = "0.1.0"
authors = ["JonathanArns <jonathan.arns@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "skim"
path = "src/lib.rs"

[dependencies]
clap = "*"
regex = "*"
rustyline = "6"